Quick Favorites "Remove from Favorites" missing for added Modifiers #58327

Closed
opened 2018-11-30 16:22:05 +01:00 by Timur Ariman · 9 comments

System Information
Operating system: Windows 10 Pro
Graphics card: GTX 1080ti

(Version 2.80 Beta)
2.80, 4c31bed6b4 Blender2.8, 2018-11-30

Short description of error
adding Modifiers to the Quick Favorites results in the loss of the "Remove Favorites" function.
Exact steps for others to reproduce the error

  • right click on Subdivision Surface,

  • click on Add to Quick Favorites,

  • in 3D view press Q and right click within Quick favorites on Subdivision Surface

modifiers within the Quick favorites can currently be only removed via right clicking the modifier in its Properties tab.
Quick favorites modifier deletion.jpg

**System Information** Operating system: Windows 10 Pro Graphics card: GTX 1080ti (Version 2.80 Beta) 2.80, 4c31bed6b46 Blender2.8, 2018-11-30 **Short description of error** adding Modifiers to the Quick Favorites results in the loss of the "Remove Favorites" function. **Exact steps for others to reproduce the error** - >right click on Subdivision Surface, - >click on Add to Quick Favorites, - >in 3D view press Q and right click within Quick favorites on Subdivision Surface modifiers within the Quick favorites can currently be only removed via right clicking the modifier in its Properties tab. ![Quick favorites modifier deletion.jpg](https://archive.blender.org/developer/F5769168/Quick_favorites_modifier_deletion.jpg)
Author

Added subscriber: @TimurAriman

Added subscriber: @TimurAriman
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Can confirm.

Can confirm.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-12-20 11:49:39 +01:00
Member

Since I am looking into other related Quick Favorites reports (#59661, #58479), I will also check on this one...

Since I am looking into other related `Quick Favorites` reports (#59661, #58479), I will also check on this one...

This issue was referenced by c79b849097

This issue was referenced by c79b8490976554d448435ae9b61d0697ad40e79f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @capnm

Added subscriber: @capnm

@lichtwerk Some related notes:

same issue with the menu bar entries

image.png

the "add" entry should be deactivated in the quick bar itself,
creating multiple entries doesn't make sense

image.png

@lichtwerk Some related notes: same issue with the menu bar entries ![image.png](https://archive.blender.org/developer/F6029364/image.png) the "add" entry should be deactivated in the quick bar itself, creating multiple entries doesn't make sense ![image.png](https://archive.blender.org/developer/F6029376/image.png)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58327
No description provided.