source/blender/editors/interface/interface_context_menu.c
@@ -699,8 +699,13 @@ bool ui_popup_context_menu_for_button(bContext *C, uiBut *but)
 		        "Add to a user defined context menu (stored in the user preferences)");
 		UI_but_func_set(but2, popup_user_menu_add_or_replace_func, but, NULL);
 
-		bUserMenu *um = ED_screen_user_menu_find(C);
-		if (um) {
+		uint um_array_len;
+		bUserMenu **um_array = ED_screen_user_menus_find(C, &um_array_len);
+		for (int um_index = 0; um_index < um_array_len; um_index++) {
+			bUserMenu *um = um_array[um_index];
+			if (um == NULL) {
+				continue;
+			}
 			bUserMenuItem *umi = ui_but_user_menu_find(C, but, um);
 			if (umi != NULL) {
 				but2 = uiDefIconTextBut(
@@ -710,6 +715,8 @@ bool ui_popup_context_menu_for_button(bContext *C, uiBut *but)
 				UI_but_func_set(but2, popup_user_menu_remove_func, um, umi);
 			}
 		}
+		MEM_freeN(um_array);
+
 		uiItemS(layout);
 	}
 
